--- a/mullo code/mullo.css
+++ b/mullo code/mullo.css
@@ -3,6 +3,9 @@
     padding: 0;
     margin: 0;
 }
+body{
+    /* color: #fff; */
+}
 .header-container{
     display: flex;
     justify-content: space-between;
@@ -17,22 +20,57 @@
     height: 100px;
     border: 2px solid burlywood;
     border-radius: 50%; 
-    background: url('./channels4_profile.jpg');
+    background: url('./photos/channels4_profile.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     margin-left: 40px;
 }
 
 .agency{
-text-transform: uppercase;
-color: goldenrod;
+    border: 2px solid black;
+    width: 100%;
+    height: 500px;
+    background: url('./photos/mullo-team.jfif');
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* position: relative; */
 }
-
+.mullo{
+    text-transform: uppercase;
+    color: #fff;
+    font-size: 5opx;
+    font-weight: 500;
+}
 .nav-list{
     text-transform: uppercase;
+    text-align: center;
     font-size: 16px;
     font-weight: 600;
 padding: 0 10px;
+}
+.chart-card{
+    display: inline-block;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    margin: 20px 15px;
+    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+}
+.chart-heading{
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 24px;
+    font-weight: 500;
+    padding: 15px 0;
+}
+.table-header{
+    background-color: tomato;
+}
+.song{
+    margin: 5px;
+    column-span: 2;
+}
+.chart-table{
+    display: inline-block;
 }
 .talent-container{
     background-color:rgba(244, 165, 96, 0.226) ; 
