--- a/mullo code/mullo.css
+++ b/mullo code/mullo.css
@@ -1,103 +1,187 @@
+html{
+    font-size: 10px;
+}
 *{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-}
-body{
-    /* color: #fff; */
 }
 .header-container{
     display: flex;
     justify-content: space-between;
     align-items: center;
     border-radius: 8px;
-    padding: 10px;
-    margin: 10px;
-    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);;
+    padding: 1rem;
+    margin: 1rem;
+    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
 }
 .logo{
-    width: 100px;
-    height: 100px;
+    width: 10rem;
+    height: 10rem;
     border: 2px solid burlywood;
     border-radius: 50%; 
     background: url('./photos/channels4_profile.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    margin-left: 40px;
+    margin-left: 4rem;
 }
-
-.agency{
-    border: 2px solid black;
-    width: 100%;
-    height: 500px;
-    background: url('./photos/mullo-team.jfif');
-    background-repeat: no-repeat;
-    background-size: cover;
-    /* position: relative; */
-}
-.mullo{
-    text-transform: uppercase;
-    color: #fff;
-    font-size: 5opx;
-    font-weight: 500;
+.nav-ul{
+    font-size: 1.6rem;
+    display: flex;
 }
 .nav-list{
     text-transform: uppercase;
+    text-decoration: none;
     text-align: center;
-    font-size: 16px;
-    font-weight: 600;
-padding: 0 10px;
+    font-weight: 500;
+    padding: 0 1rem;
 }
-.chart-card{
-    display: inline-block;
-    border: 1px solid #fff;
+#search{
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 0.5rem;
+    margin-right: 5rem;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: #757575;
+}
+.agency{
     border-radius: 5px;
-    margin: 20px 15px;
-    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+    width: 100%;
+    height: 120vh;
+    background: url('./photos/mullo-team.jfif');
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    color: #fff;
 }
-.chart-heading{
+.mullo-brand{
+    position: absolute;
+    top: 32%;
+    right: 22%;
+}
+.mullo{
     text-align: center;
     text-transform: uppercase;
-    font-size: 24px;
+    font-size: 5rem;
     font-weight: 500;
-    padding: 15px 0;
+}
+.dedication-message{
+    text-align: center;
+    font-size: 2rem;
+    font-weight: 500;
+}
+.chart-container{
+    font-size: 2rem;
+    padding: 5rem;
+    background-color: #e1e4e7;
+}
+.charts{
+    text-align: center;
+    font-weight: 500;
+    padding-bottom: 5rem;
+}
+.charts h2{
+    font-size: 5rem;
+}
+.chart-statement{
+    color: #757575;
+    font-size: 2rem;
+}
+.global-charts{
+    display: grid;
+    grid-template-columns: repeat(4, 25%);
+    grid-gap: 1.5rem;
+}
+.chart-card{
+    background-color: #fff;
+    border: 2px solid #fff;
+    border-radius: 6px;
+    /* margin: 20px 15px; */
+    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+}
+.chart-content{
+    border-radius: 5px;
+    border-collapse: collapse;
+}
+.chart-content thead{
+    text-align: left;
+    font-weight: 500;
+    background-color: rgb(66, 133, 133);
+}
+.chart-content th,
+.chart-content td{
+    padding: 1.1rem 1.6rem;
+}
+.chart-content tbody{
+    background-color: rgb(193, 193, 211);
+}
+.chart-content tbody tr:nth-child(odd){
+    background-color: #f8f9fa;
 }
 .table-header{
-    background-color: tomato;
+    text-align: center;
+    font-size: 2.4rem;
+    font-weight: 500;
+    padding: 1.5rem 0;
 }
-.song{
-    margin: 5px;
-    column-span: 2;
+.events-upper{
+    text-align: center;
+    font-size: 50px;
+    font-weight: 500;
 }
-.chart-table{
-    display: inline-block;
+.events{
+    margin-left: 20px;
+}
+.latest-events{
+    text-align: center;
+    font-size: 20px;
+    font-weight: 500;
+}
+.video-events{
+    display: grid;
+    grid-template-columns: repeat(3, 33.33%);
+    grid-gap: 10px;
+}
+.event-content{
+    text-align: left;
+    text-transform: capitalize;
+    font-size: 16px;
+    font-weight: 500;
+}
+#video{
+    width: 25vw;
+    height: 30vh;
 }
 .talent-container{
-    background-color:rgba(244, 165, 96, 0.226) ; 
     padding: 80px;
+    background-color: #f8f9fa;
 }
 .talent-header{
     text-align: center;
-    text-transform: capitalize;
 }
 .talent-heading{
+    text-transform: capitalize;
     font-size: 50px;
-    font-weight: 600;
+    font-weight: 500;
+}
+.talent-statement{
+    color: #757575;
+    font-size: 20px;
+    font-weight: 500;
 }
 .talent-wrapper{
     display: flex;
     justify-content: center;
-    margin-top: 30px;
-}
-.talent-card{
-    background-color: rgba(137, 43, 226, 0.363);
+    flex-wrap: wrap;
     box-shadow:  0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
-border: 2px solid #fff;
-height: 160px;
-width: 250px;
-border-radius: 15px;
-position: relative;
-margin-right: 15px;
+    border: 2px solid #fff;
+    height: 160px;
+    width: 250px;
+    border-radius: 15px;
+    position: relative;
+    margin-right: 15px;
 }
 .pic{
 width: 100px;
@@ -136,31 +220,38 @@ position: absolute;
     right: 5px;
 }
 .footer-container{
-    padding: 100px;
+    /* padding: 100px; */
+}
+
+.footer-upper{
+    display: flex;
+    /* margin-bottom: 20px; */
+}
+.footer-wrapper{
+    border-radius: 5px;
+    flex-basis: 25%;
+    margin: 0 1.5rem;
+    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+}
+.footer-heading{
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 1.8rem;
+    font-weight: 500;
+}
+.footer-bottom{
+    /* border-top: 10px dashed darksalmon; */
+    display: flex;
+    justify-content: space-between;
 }
 .footer-list{
     list-style-type: none;
     line-height: 1.4; 
-    display: flex;
+    /* display: flex; */
 }
 .list{
-    padding: 0 20px;
-    margin-right: 20px;
-}
-.footer-upper{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
-}
-.footer-wrapper{
-    width: 25%;
-    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
-    margin-right: 10px;
-}
-.footer-bottom{
-    border-top: 10px dashed darksalmon;
-    display: flex;
-    justify-content: space-between;
+    /* padding: 0 20px; */
+    /* margin-right: 20px; */
 }
 .copy{
     border-left: 2px solid violet;
